# SolusEngine

./: .build.py  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  appveyor.yml  main.cpp
ex/: CMakeLists.txt
ex/scenes/: CMakeLists.txt  openairscene.cpp
ext/stb/: LICENSE.md
moduls/: FindGLFW.cmake  FindGTest.cmake  FindPackageMessage.cmake  FindVulkan.cmake  FindVulkanSDK.cmake  Findassimp.cmake  LICENSE.md
samples/: CMakeLists.txt
samples/triangle/: CMakeLists.txt  triangle.cpp
samples/window/: CMakeLists.txt  window.cpp
src/: CMakeLists.txt  soEngine.cpp  soEngine.h  soEngine.hpp  vkBuffer.cpp  vkBuffer.hpp  vkCommandBuffers.cpp  vkCommandBuffers.hpp  vkCommandPool.cpp  vkCommandPool.hpp  vkDebugReportCallbackEXT.cpp  vkDebugReportCallbackEXT.hpp  vkDepthImage.cpp  vkDepthImage.hpp  vkDescriptorPool.cpp  vkDescriptorPool.hpp  vkDescriptorSet.cpp  vkDescriptorSet.hpp  vkDescriptorSetLayout.cpp  vkDescriptorSetLayout.hpp  vkFramebuffers.cpp  vkFramebuffers.hpp  vkFramework.cpp  vkFramework.hpp  vkImage.cpp  vkImage.hpp  vkImageViews.cpp  vkImageViews.hpp  vkIndexBuffer.cpp  vkIndexBuffer.hpp  vkInstance.cpp  vkInstance.hpp  vkLogicalDevice.cpp  vkLogicalDevice.hpp  vkModel.cpp  vkModel.hpp  vkPhysicalDevice.cpp  vkPhysicalDevice.hpp  vkPipeline.cpp  vkPipeline.hpp  (+27 more)
src/cc/: CMakeLists.txt  README.md  ccConstants.cpp  ccConstants.hpp  ccException.cpp  ccException.hpp  ccFile.cpp  ccFile.hpp  ccMemory.cpp  ccMemory.hpp
src/cc/tests/: ccConstantsTest.hpp  ccExceptionTest.hpp  ccFileTest.hpp
src/cxx/: CMakeLists.txt  soAlignedVector.hpp  soCompiler.hpp  soConstExpr.hpp  soDebugCallback.cpp  soDebugCallback.hpp  soDefinitions.hpp  soDynamicLibrary.cpp  soDynamicLibrary.hpp  soException.hpp  soFileSystem.cpp  soFileSystem.hpp  soJSON.hpp  soMacroDispatcher.hpp  soMemory.hpp  soModule.cpp  soModule.hpp  soOS.cpp  soOS.hpp  soPrettyFunctionSig.hpp  soReturnT.cpp  soReturnT.hpp  soSpan.hpp
src/cxx/boost/: soBoostFilesystem.hpp
src/cxx/gsl/: soGSLSpan.hpp
src/cxx/std/: soStdFilesystem.cpp  soStdFilesystem.hpp
src/glfw/: CMakeLists.txt  soGLFWBaseSurface.cpp  soGLFWBaseSurface.hpp  soGLFWSurface.cpp  soGLFWSurface.h  soGLFWSurfaceInterface.hpp  surface.json
src/glfw/vk/: soVkGLFWSurface.cpp  soVkGLFWSurface.hpp  soVulkanSurface.cpp  soVulkanSurface.hpp
src/interfaces/: soEngineInterface.hpp  soSurfaceInterface.hpp
src/shaders/: shader.frag  shader.vert
src/shaders/triangle/: shader.frag  shader.vert
src/utils/: CMakeLists.txt
src/utils/def/: soDefinitions.hpp
src/utils/err/: soException.hpp
src/utils/fs/: soFileSystem.cpp  soFileSystem.hpp
src/utils/mem/: soAlignedAllocator.hpp  soAlignedVector.hpp
src/vk/: CMakeLists.txt  soVkBuffer.cpp  soVkBuffer.hpp  soVkCommandBuffers.cpp  soVkCommandBuffers.hpp  soVkCommandPool.cpp  soVkCommandPool.hpp  soVkDebugReportCallbackEXT.cpp  soVkDebugReportCallbackEXT.hpp  soVkDepthImage.cpp  soVkDepthImage.hpp  soVkDescriptorPool.cpp  soVkDescriptorPool.hpp  soVkDescriptorSet.cpp  soVkDescriptorSet.hpp  soVkDescriptorSetLayout.cpp  soVkDescriptorSetLayout.hpp  soVkEngine.cpp  soVkEngine.hpp  soVkFences.hpp  soVkFramebuffers.cpp  soVkFramebuffers.hpp  soVkImage.cpp  soVkImage.hpp  soVkImageViews.cpp  soVkImageViews.hpp  soVkIndexBuffer.cpp  soVkIndexBuffer.hpp  soVkInstance.cpp  soVkInstance.hpp  soVkLogicalDevice.cpp  soVkLogicalDevice.hpp  soVkMesh.cpp  soVkMesh.hpp  soVkModel.cpp  soVkModel.hpp  soVkPhysicalDevice.cpp  soVkPhysicalDevice.hpp  soVkPipeline.cpp  soVkPipeline.hpp  (+31 more)
src/vk/glfw/: soVkGLFWSurface.hpp
src/vk/interfaces/: soVkSurfaceInterface.hpp
tests/: CMakeLists.txt  commonTest.hpp  mainTest.cpp
tools/valgrind/: valgrind.supp
