
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/cc/tests)

#ADD_EXECUTABLE(mainTest mainTest.cpp
#                        ${PROJECT_SOURCE_DIR}/src/cc/tests/ccConstantsTest.hpp
#                        ${PROJECT_SOURCE_DIR}/src/cc/tests/ccExceptionTest.hpp
#                        ${PROJECT_SOURCE_DIR}/src/cc/tests/ccFileTest.hpp)
#
#SET_TARGET_PROPERTIES(mainTest PROPERTIES LINKER_LANGUAGE CXX)
#
#TARGET_LINK_LIBRARIES(mainTest ${GTEST_LIBRARIES} VkEng)
