
FILE(GLOB
     SOURCES
     RELATIVE
     "${PROJECT_SOURCE_DIR}/ex/scenes"
     "${PROJECT_SOURCE_DIR}/ex/scenes/*.cpp")

FOREACH(SOURCE ${SOURCES})
  STRING(REPLACE ".cpp" "" EXE ${SOURCE})

  ADD_EXECUTABLE(${EXE} ${SOURCE})

  TARGET_LINK_LIBRARIES(${EXE} SoEng)

  SET_PROPERTY(TARGET ${EXE} PROPERTY CXX_STANDARD 14)
  SET_PROPERTY(TARGET ${EXE} PROPERTY CXX_STANDARD_REQUIRED ON)
ENDFOREACH()
